# LocMemory

./: .gitignore  README.md  Structure_example.txt  config.yaml  main.py  package.json  pyproject.toml  test_workflow.py
core/: __init__.py  add_memories.py  chat.py  config.py  config.yaml  consolidator.py  context.py  extractor.py  graph.py  hebbian.py  llm.py  locmemory.py  logger.py  memory.py  procedural.py  retriever.py  security.py
core/memory/: __init__.py  classifier.py  consolidator.py  extractor.py  graph.py  hebbian.py  memory.py  necessity.py  procedural.py  retriever.py
core/rl/: __init__.py  agent.py  env.py  train.py
core/security/: __init__.py  security.py
core/settings/: config.py
core/tui/: __init__.py  commands.py
dashboard/backend/: main.py
dashboard/backend/data/: domains.json  secret.key
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/frontend/data/: domains.json
dashboard/frontend/src/: App.tsx  index.css  main.tsx
dashboard/frontend/src/components/: BrainScene.tsx  DomainsPanel.tsx  HebbianPanel.tsx  HudSequence.tsx  MatrixIntro.tsx  layout.tsx  (+6 more)
data/: domains.json  retrieval_log.csv  rl_training_log.csv
scripts/: seed_db.py
tests/: conftest.py  test_api.py  test_classifier.py  test_context.py  test_embedder.py  test_extractor.py  test_graph.py  test_hebbian.py  test_integration.py  test_llm.py  test_llm_backends.py  test_logger.py  test_memory.py  test_retriever.py  test_rl_agent.py  test_rl_env.py  test_security.py
(+27 files in other folders)
