[project]
name = "locmemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.3",
    "pytest>=7.0.0",
    "networkx>=3.0",
    "python-louvain>=0.16",
    "scipy>=1.11.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.scripts]
LocMemory = "core.chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
